[package]
authors = ["Joshua Rodgers <bytemr@gmail.com>"]
edition = "2018"
name = "worp-playground"
version = "0.1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
worp-dice = {git = "https://github.com/mr-byte/worp", branch = "main"}
worp-scroll = {git = "https://github.com/mr-byte/worp", branch = "main"}

[profile.release]
lto = true
