[package]
authors = ["Joshua Rodgers <bytemr@gmail.com>"]
edition = "2018"
name = "worp-playground"
version = "0.1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dice = {git = "https://github.com/mr-byte/dice", branch = "main"}
wasm-bindgen = "0.2"
web-sys = "0.3"

[profile.release]
lto = true
